// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RoomCardInfo /> обычный режим должен показывать LCD монитор, если он есть 1`] = `
<div
  className="wrap"
>
  <div>
    <Link
      cls="title"
      target="_blank"
      theme="black"
      url="//conferenceRoomMap/room"
    >
      roomName
    </Link>
    <a
      className="location"
      href="//conferenceRoomMap/room"
      rel="noopener noreferrer"
      target="_blank"
      title="roomCard.map"
    >
      <React.Fragment>
        roomCard.location
        <span
          className="locationIcon"
        >
          <SVGIcon
            glyph="location"
          />
        </span>
      </React.Fragment>
    </a>
    <div
      className="properties"
    >
      <table
        className="propertiesTable"
      >
        <tbody>
          <tr>
            <td
              className="propertyCell"
            >
              <div
                className="capacity"
              />
            </td>
            <td
              className="propertyCell"
            >
              roomCard.capacity
            </td>
            <td
              className="propertyCell"
            />
          </tr>
          <tr>
            <td
              className="propertyCell"
            >
              <div
                className="capacity"
              />
            </td>
            <td
              className="propertyCell"
            >
              roomCard.seats
            </td>
            <td
              className="propertyCell"
            />
          </tr>
          <tr>
            <td
              className="propertyCell"
            >
              <SVGIcon
                glyph="yes"
                height={16}
                width={16}
              />
            </td>
            <td
              className="propertyCell"
            >
              roomCard.lcdPanel
            </td>
            <td
              className="propertyCell"
            />
          </tr>
        </tbody>
      </table>
    </div>
    <Link
      className="scheduleLink"
      replace={false}
      target="_blank"
      to="/schedule/room@yandex-team.ru"
    >
      <Link
        theme="normal"
      >
        roomCard.scheduleLink
      </Link>
    </Link>
  </div>
</div>
`;

exports[`<RoomCardInfo /> обычный режим должен показывать видео-связь, если она есть 1`] = `
<div
  className="wrap"
>
  <div>
    <Link
      cls="title"
      target="_blank"
      theme="black"
      url="//conferenceRoomMap/room"
    >
      roomName
    </Link>
    <a
      className="location"
      href="//conferenceRoomMap/room"
      rel="noopener noreferrer"
      target="_blank"
      title="roomCard.map"
    >
      <React.Fragment>
        roomCard.location
        <span
          className="locationIcon"
        >
          <SVGIcon
            glyph="location"
          />
        </span>
      </React.Fragment>
    </a>
    <div
      className="properties"
    >
      <table
        className="propertiesTable"
      >
        <tbody>
          <tr>
            <td
              className="propertyCell"
            >
              <div
                className="capacity"
              />
            </td>
            <td
              className="propertyCell"
            >
              roomCard.capacity
            </td>
            <td
              className="propertyCell"
            />
          </tr>
          <tr>
            <td
              className="propertyCell"
            >
              <div
                className="capacity"
              />
            </td>
            <td
              className="propertyCell"
            >
              roomCard.seats
            </td>
            <td
              className="propertyCell"
            />
          </tr>
          <tr>
            <td
              className="propertyCell"
            >
              <SVGIcon
                glyph="yes"
                height={16}
                width={16}
              />
            </td>
            <td
              className="propertyCell"
            >
              roomCard.video
            </td>
            <td
              className="propertyCell"
            >
              1030
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <Link
      className="scheduleLink"
      replace={false}
      target="_blank"
      to="/schedule/room@yandex-team.ru"
    >
      <Link
        theme="normal"
      >
        roomCard.scheduleLink
      </Link>
    </Link>
  </div>
</div>
`;

exports[`<RoomCardInfo /> обычный режим должен показывать вместимость 1`] = `
<div
  className="wrap"
>
  <div>
    <Link
      cls="title"
      target="_blank"
      theme="black"
      url="//conferenceRoomMap/room"
    >
      roomName
    </Link>
    <span
      className="location"
      onClick={[Function]}
      title="roomCard.map"
    >
      <React.Fragment>
        roomCard.location
        <span
          className="locationIcon"
        >
          <SVGIcon
            glyph="location"
          />
        </span>
      </React.Fragment>
    </span>
    <div
      className="properties"
    >
      <table
        className="propertiesTable"
      >
        <tbody>
          <tr>
            <td
              className="propertyCell"
            >
              <div
                className="capacity"
              >
                10
              </div>
            </td>
            <td
              className="propertyCell"
            >
              roomCard.capacity
            </td>
            <td
              className="propertyCell"
            />
          </tr>
          <tr>
            <td
              className="propertyCell"
            >
              <div
                className="capacity"
              />
            </td>
            <td
              className="propertyCell"
            >
              roomCard.seats
            </td>
            <td
              className="propertyCell"
            />
          </tr>
        </tbody>
      </table>
    </div>
    <Link
      className="scheduleLink"
      replace={false}
      target="_blank"
      to="/schedule/room@yandex-team.ru"
    >
      <Link
        theme="normal"
      >
        roomCard.scheduleLink
      </Link>
    </Link>
  </div>
</div>
`;

exports[`<RoomCardInfo /> обычный режим должен показывать гостевой wifi, если он есть 1`] = `
<div
  className="wrap"
>
  <div>
    <Link
      cls="title"
      target="_blank"
      theme="black"
      url="//conferenceRoomMap/room"
    >
      roomName
    </Link>
    <a
      className="location"
      href="//conferenceRoomMap/room"
      rel="noopener noreferrer"
      target="_blank"
      title="roomCard.map"
    >
      <React.Fragment>
        roomCard.location
        <span
          className="locationIcon"
        >
          <SVGIcon
            glyph="location"
          />
        </span>
      </React.Fragment>
    </a>
    <div
      className="properties"
    >
      <table
        className="propertiesTable"
      >
        <tbody>
          <tr>
            <td
              className="propertyCell"
            >
              <div
                className="capacity"
              />
            </td>
            <td
              className="propertyCell"
            >
              roomCard.capacity
            </td>
            <td
              className="propertyCell"
            />
          </tr>
          <tr>
            <td
              className="propertyCell"
            >
              <div
                className="capacity"
              />
            </td>
            <td
              className="propertyCell"
            >
              roomCard.seats
            </td>
            <td
              className="propertyCell"
            />
          </tr>
          <tr>
            <td
              className="propertyCell"
            >
              <SVGIcon
                glyph="yes"
                height={16}
                width={16}
              />
            </td>
            <td
              className="propertyCell"
            >
              roomCard.guestWifi
            </td>
            <td
              className="propertyCell"
            />
          </tr>
        </tbody>
      </table>
    </div>
    <Link
      className="scheduleLink"
      replace={false}
      target="_blank"
      to="/schedule/room@yandex-team.ru"
    >
      <Link
        theme="normal"
      >
        roomCard.scheduleLink
      </Link>
    </Link>
  </div>
</div>
`;

exports[`<RoomCardInfo /> обычный режим должен показывать количество стульев 1`] = `
<div
  className="wrap"
>
  <div>
    <Link
      cls="title"
      target="_blank"
      theme="black"
      url="//conferenceRoomMap/room"
    >
      roomName
    </Link>
    <a
      className="location"
      href="//conferenceRoomMap/room"
      rel="noopener noreferrer"
      target="_blank"
      title="roomCard.map"
    >
      <React.Fragment>
        roomCard.location
        <span
          className="locationIcon"
        >
          <SVGIcon
            glyph="location"
          />
        </span>
      </React.Fragment>
    </a>
    <div
      className="properties"
    >
      <table
        className="propertiesTable"
      >
        <tbody>
          <tr>
            <td
              className="propertyCell"
            >
              <div
                className="capacity"
              >
                10
              </div>
            </td>
            <td
              className="propertyCell"
            >
              roomCard.capacity
            </td>
            <td
              className="propertyCell"
            />
          </tr>
          <tr>
            <td
              className="propertyCell"
            >
              <div
                className="capacity"
              >
                10
              </div>
            </td>
            <td
              className="propertyCell"
            >
              roomCard.seats
            </td>
            <td
              className="propertyCell"
            />
          </tr>
        </tbody>
      </table>
    </div>
    <Link
      className="scheduleLink"
      replace={false}
      target="_blank"
      to="/schedule/room@yandex-team.ru"
    >
      <Link
        theme="normal"
      >
        roomCard.scheduleLink
      </Link>
    </Link>
  </div>
</div>
`;

exports[`<RoomCardInfo /> обычный режим должен показывать маркерную доску, если она есть 1`] = `
<div
  className="wrap"
>
  <div>
    <Link
      cls="title"
      target="_blank"
      theme="black"
      url="//conferenceRoomMap/room"
    >
      roomName
    </Link>
    <a
      className="location"
      href="//conferenceRoomMap/room"
      rel="noopener noreferrer"
      target="_blank"
      title="roomCard.map"
    >
      <React.Fragment>
        roomCard.location
        <span
          className="locationIcon"
        >
          <SVGIcon
            glyph="location"
          />
        </span>
      </React.Fragment>
    </a>
    <div
      className="properties"
    >
      <table
        className="propertiesTable"
      >
        <tbody>
          <tr>
            <td
              className="propertyCell"
            >
              <div
                className="capacity"
              />
            </td>
            <td
              className="propertyCell"
            >
              roomCard.capacity
            </td>
            <td
              className="propertyCell"
            />
          </tr>
          <tr>
            <td
              className="propertyCell"
            >
              <div
                className="capacity"
              />
            </td>
            <td
              className="propertyCell"
            >
              roomCard.seats
            </td>
            <td
              className="propertyCell"
            />
          </tr>
          <tr>
            <td
              className="propertyCell"
            >
              <SVGIcon
                glyph="yes"
                height={16}
                width={16}
              />
            </td>
            <td
              className="propertyCell"
            >
              roomCard.markerBoard
            </td>
            <td
              className="propertyCell"
            />
          </tr>
        </tbody>
      </table>
    </div>
    <Link
      className="scheduleLink"
      replace={false}
      target="_blank"
      to="/schedule/room@yandex-team.ru"
    >
      <Link
        theme="normal"
      >
        roomCard.scheduleLink
      </Link>
    </Link>
  </div>
</div>
`;

exports[`<RoomCardInfo /> обычный режим должен показывать описание переговорки, если оно есть 1`] = `
<div
  className="wrap"
>
  <div>
    <Link
      cls="title"
      target="_blank"
      theme="black"
      url="//conferenceRoomMap/room"
    >
      roomName
    </Link>
    <a
      className="location"
      href="//conferenceRoomMap/room"
      rel="noopener noreferrer"
      target="_blank"
      title="roomCard.map"
    >
      <React.Fragment>
        roomCard.location
        <span
          className="locationIcon"
        >
          <SVGIcon
            glyph="location"
          />
        </span>
      </React.Fragment>
    </a>
    <div
      className="properties"
    >
      <table
        className="propertiesTable"
      >
        <tbody>
          <tr>
            <td
              className="propertyCell"
            >
              <div
                className="capacity"
              />
            </td>
            <td
              className="propertyCell"
            >
              roomCard.capacity
            </td>
            <td
              className="propertyCell"
            />
          </tr>
          <tr>
            <td
              className="propertyCell"
            >
              <div
                className="capacity"
              />
            </td>
            <td
              className="propertyCell"
            >
              roomCard.seats
            </td>
            <td
              className="propertyCell"
            />
          </tr>
        </tbody>
      </table>
    </div>
    <div
      className="description"
    >
      description
    </div>
    <Link
      className="scheduleLink"
      replace={false}
      target="_blank"
      to="/schedule/room@yandex-team.ru"
    >
      <Link
        theme="normal"
      >
        roomCard.scheduleLink
      </Link>
    </Link>
  </div>
</div>
`;

exports[`<RoomCardInfo /> обычный режим должен показывать основной контект вместо спиннера 1`] = `
<div
  className="wrap"
>
  <div>
    <Link
      cls="title"
      target="_blank"
      theme="black"
      url="//conferenceRoomMap/room"
    >
      roomName
    </Link>
    <a
      className="location"
      href="//conferenceRoomMap/room"
      rel="noopener noreferrer"
      target="_blank"
      title="roomCard.map"
    >
      <React.Fragment>
        roomCard.location
        <span
          className="locationIcon"
        >
          <SVGIcon
            glyph="location"
          />
        </span>
      </React.Fragment>
    </a>
    <div
      className="properties"
    >
      <table
        className="propertiesTable"
      >
        <tbody>
          <tr>
            <td
              className="propertyCell"
            >
              <div
                className="capacity"
              />
            </td>
            <td
              className="propertyCell"
            >
              roomCard.capacity
            </td>
            <td
              className="propertyCell"
            />
          </tr>
          <tr>
            <td
              className="propertyCell"
            >
              <div
                className="capacity"
              />
            </td>
            <td
              className="propertyCell"
            >
              roomCard.seats
            </td>
            <td
              className="propertyCell"
            />
          </tr>
        </tbody>
      </table>
    </div>
    <Link
      className="scheduleLink"
      replace={false}
      target="_blank"
      to="/schedule/room@yandex-team.ru"
    >
      <Link
        theme="normal"
      >
        roomCard.scheduleLink
      </Link>
    </Link>
  </div>
</div>
`;

exports[`<RoomCardInfo /> обычный режим должен показывать проектор, если он есть 1`] = `
<div
  className="wrap"
>
  <div>
    <Link
      cls="title"
      target="_blank"
      theme="black"
      url="//conferenceRoomMap/room"
    >
      roomName
    </Link>
    <a
      className="location"
      href="//conferenceRoomMap/room"
      rel="noopener noreferrer"
      target="_blank"
      title="roomCard.map"
    >
      <React.Fragment>
        roomCard.location
        <span
          className="locationIcon"
        >
          <SVGIcon
            glyph="location"
          />
        </span>
      </React.Fragment>
    </a>
    <div
      className="properties"
    >
      <table
        className="propertiesTable"
      >
        <tbody>
          <tr>
            <td
              className="propertyCell"
            >
              <div
                className="capacity"
              />
            </td>
            <td
              className="propertyCell"
            >
              roomCard.capacity
            </td>
            <td
              className="propertyCell"
            />
          </tr>
          <tr>
            <td
              className="propertyCell"
            >
              <div
                className="capacity"
              />
            </td>
            <td
              className="propertyCell"
            >
              roomCard.seats
            </td>
            <td
              className="propertyCell"
            />
          </tr>
          <tr>
            <td
              className="propertyCell"
            >
              <SVGIcon
                glyph="yes"
                height={16}
                width={16}
              />
            </td>
            <td
              className="propertyCell"
            >
              roomCard.projector
            </td>
            <td
              className="propertyCell"
            />
          </tr>
        </tbody>
      </table>
    </div>
    <Link
      className="scheduleLink"
      replace={false}
      target="_blank"
      to="/schedule/room@yandex-team.ru"
    >
      <Link
        theme="normal"
      >
        roomCard.scheduleLink
      </Link>
    </Link>
  </div>
</div>
`;

exports[`<RoomCardInfo /> обычный режим должен показывать телефон, если он есть 1`] = `
<div
  className="wrap"
>
  <div>
    <Link
      cls="title"
      target="_blank"
      theme="black"
      url="//conferenceRoomMap/room"
    >
      roomName
    </Link>
    <a
      className="location"
      href="//conferenceRoomMap/room"
      rel="noopener noreferrer"
      target="_blank"
      title="roomCard.map"
    >
      <React.Fragment>
        roomCard.location
        <span
          className="locationIcon"
        >
          <SVGIcon
            glyph="location"
          />
        </span>
      </React.Fragment>
    </a>
    <div
      className="properties"
    >
      <table
        className="propertiesTable"
      >
        <tbody>
          <tr>
            <td
              className="propertyCell"
            >
              <div
                className="capacity"
              />
            </td>
            <td
              className="propertyCell"
            >
              roomCard.capacity
            </td>
            <td
              className="propertyCell"
            />
          </tr>
          <tr>
            <td
              className="propertyCell"
            >
              <div
                className="capacity"
              />
            </td>
            <td
              className="propertyCell"
            >
              roomCard.seats
            </td>
            <td
              className="propertyCell"
            />
          </tr>
          <tr>
            <td
              className="propertyCell"
            >
              <SVGIcon
                glyph="yes"
                height={16}
                width={16}
              />
            </td>
            <td
              className="propertyCell"
            >
              roomCard.phone
            </td>
            <td
              className="propertyCell"
            >
              1030
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <Link
      className="scheduleLink"
      replace={false}
      target="_blank"
      to="/schedule/room@yandex-team.ru"
    >
      <Link
        theme="normal"
      >
        roomCard.scheduleLink
      </Link>
    </Link>
  </div>
</div>
`;

exports[`<RoomCardInfo /> режим загрузки должен показывать спиннер вместо основного контента 1`] = `
<div
  className="wrap"
>
  <div
    className="loading"
  >
    <Spin
      size="m"
      theme="normal"
    />
  </div>
</div>
`;
